# overpass

./: .gitignore  Dockerfile  LICENSE  README.md  app.py  config.py  docker-compose.example  pyproject.toml
docker/: nginx.conf  startup.sh
overpass/: __init__.py  archive.py  auth.py  db.py  forms.py  hls.py  index.py  jinja_filters.py  manage_user.py  models.py  rtmp_api.py  rtmp_handler.py  rtmp_server_api.py  schema.sql  stream_api.py  stream_utils.py  util.py  watch.py
overpass/routes/: archive.py  auth.py  hls.py  index.py  manage_user.py  rtmp_server_api.py  stream.py  watch.py
overpass/templates/: alert.html  archive.html  generate_stream.html  header.html  index.html  layout.html  manage_stream.html  manage_user.html  watch.html
overpass/templates/stream/: generate.html  watch.html
